# charlie

./: .coverage  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PAPER.md  README.md  RUNBOOK.md  pyproject.toml
.github/workflows/: ci.yml
.pre-commit-configs/: hooks.yaml
paper/: omni-topos-paper.tex
src/omni_topos/: __init__.py  _types.py  epsilon.py  faraday.py  hamilton.py  lambda_topo.py  phase_manager.py  simulation.py
src/omni_topos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_integration.py  test_omni_topos.py
